# MongoLite

./: README.md
C/: CMakeLists.txt
C/src/: CMakeLists.txt  client-private.h  client.c  client.h  collection-private.h  collection.c  collection.h  errors.h  init.c  init.h  mongolite.h  sync.c  sync.h
C/tests/: CMakeLists.txt  connect.c
